// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GridHead > should match the snapshot 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="cl-grid-head"
    >
      <tr
        class="cl-grid-head__row"
      >
        <th>
          <div
            class="cl-grid-checkbox"
          >
            <input
              class="cl-grid-checkbox__input"
              id="select_all_test-grid-id"
              type="checkbox"
            />
            <label
              class="cl-label"
              for="select_all_test-grid-id"
            >
              <span
                class="cl-icon chop-icon__square cl-icon_extra-small"
              />
            </label>
          </div>
        </th>
        <th
          class="cl-grid-header-cell"
        >
          Col 1
        </th>
        <th
          class="cl-grid-header-cell"
        >
          Col 2
        </th>
        <th
          class="cl-grid-header-cell"
        >
          Col 3
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`GridHead > snapshot with sorting enabled > should match snapshot with sortableByDefault=true 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="cl-grid-head"
    >
      <tr
        class="cl-grid-head__row"
      >
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 1
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-busy="false"
                aria-label="Sort by Col 1 ascending"
                class="cl-icon-button cl-grid-sort-button"
                type="button"
              >
                <span
                  class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 2
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-busy="false"
                aria-label="Sort by Col 2 ascending"
                class="cl-icon-button cl-grid-sort-button"
                type="button"
              >
                <span
                  class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 3
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-busy="false"
                aria-label="Sort by Col 3 ascending"
                class="cl-icon-button cl-grid-sort-button"
                type="button"
              >
                <span
                  class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`GridHead > snapshot with sorting enabled > should match snapshot with sorted column 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="cl-grid-head"
    >
      <tr
        class="cl-grid-head__row"
      >
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 1
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-busy="false"
                aria-label="Sort by Col 1 descending"
                class="cl-icon-button cl-grid-sort-button"
                type="button"
              >
                <span
                  class="cl-icon-button__icon cl-icon chop-icon__arrow-up-circle cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 2
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-busy="false"
                aria-label="Sort by Col 2 ascending"
                class="cl-icon-button cl-grid-sort-button"
                type="button"
              >
                <span
                  class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_sortable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Col 3
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-busy="false"
                aria-label="Sort by Col 3 ascending"
                class="cl-icon-button cl-grid-sort-button"
                type="button"
              >
                <span
                  class="cl-icon-button__icon cl-icon chop-icon__circle cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`GridHead filter prop threading > snapshot with filtering enabled > should match snapshot with active filter conditions 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="cl-grid-head"
    >
      <tr
        class="cl-grid-head__row"
      >
        <th
          class="cl-grid-header-cell cl-grid-header-cell_filterable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Name
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Filter by Name"
                class="cl-grid-filter-button cl-grid-filter-button_active"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="cl-grid-filter-button__icon cl-icon chop-icon__filter cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_filterable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Age
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Filter by Age"
                class="cl-grid-filter-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="cl-grid-filter-button__icon cl-icon chop-icon__filter cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;

exports[`GridHead filter prop threading > snapshot with filtering enabled > should match snapshot with filterableByDefault=true 1`] = `
<DocumentFragment>
  <table>
    <thead
      class="cl-grid-head"
    >
      <tr
        class="cl-grid-head__row"
      >
        <th
          class="cl-grid-header-cell cl-grid-header-cell_filterable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Name
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Filter by Name"
                class="cl-grid-filter-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="cl-grid-filter-button__icon cl-icon chop-icon__filter cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
        <th
          class="cl-grid-header-cell cl-grid-header-cell_filterable"
        >
          <div
            class="cl-grid-header-cell__content"
          >
            <span
              class="cl-grid-header-cell__title"
            >
              Age
            </span>
            <div
              class="cl-grid-header-cell__controls"
            >
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Filter by Age"
                class="cl-grid-filter-button"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="cl-grid-filter-button__icon cl-icon chop-icon__filter cl-icon_small"
                />
              </button>
            </div>
          </div>
        </th>
      </tr>
    </thead>
  </table>
</DocumentFragment>
`;
